static/style.css
html {
  top: 0;
  left: 0;
  margin: 0;
}

body {
  top: 0;
  left: 0;
  margin: 0;
  background-color: #282828;
  height: 100vh;
  width: 100vw;
  overflow-x: hidden;
  scroll-behavior: smooth;

  /* background: rgb(34, 193, 195);
  background: linear-gradient(
    0deg,
    rgba(34, 193, 195, 1) 0%,
    rgb(72 72 72) 100%
  );
*/
  /* background: linear-gradient(0deg, rgb(0 0 0) 0%, rgb(72 72 72) 100%); */
}

* {
  top: 0;
  left: 0;
  margin: 0;
}
section {
  top: 0;
  left: 0;
  margin: 0;
  height: 100%;
  width: 100%;
  overflow-x: clip;
}

header {
  position: absolute;
  width: 100%;
  z-index: 3;
}

/* section:nth-child(3) {
  background: black;
}

/* section:nth-child(4) {
  background: black;
} */
@font-face {
  font-family: "oo";
  src: url("./Montserrat-Medium.ttf");
}

@font-face {
  font-family: "prak";
  src: url("./prakrta_.ttf");
}

@font-face {
  font-family: "jura";
  src: url("./Jura-VariableFont_wght.ttf");
}
@font-face {
  font-family: "Jeju Hallasan";
  font-style: normal;
  font-weight: 400;
  src: url(//fonts.gstatic.com/ea/jejuhallasan/v3/JejuHallasan-Regular.eot);
  src: url(//fonts.gstatic.com/ea/jejuhallasan/v3/JejuHallasan-Regular.eot?#iefix)
      format("embedded-opentype"),
    url(//fonts.gstatic.com/ea/jejuhallasan/v3/JejuHallasan-Regular.woff2)
      format("woff2"),
    url(//fonts.gstatic.com/ea/jejuhallasan/v3/JejuHallasan-Regular.woff)
      format("woff"),
    url(//fonts.gstatic.com/ea/jejuhallasan/v3/JejuHallasan-Regular.ttf)
      format("truetype");
}
#image3 {
  transition: ease;
}

#image4 {
  transition: ease;
}
#image5 {
  transition: ease;
}
.bg_design {
  background-image: url("./logo\ h\ \ 2.png");

  width: 100%;
  height: 100%;
  position: absolute;
  top: 0%;
  left: 0%;
  background-origin: center;
  /* background-position: center; */
  background-size: contain;
  background-repeat: no-repeat;
  transition: 0.2s linear;
  /* filter: blur(10px); */
}

.bg_2 {
  position: absolute;
  left: 73%;
  top: 66%;
  transform: rotate(1deg);
  border-radius: 39%;
  position: absolute;
  left: 80%;
  top: 90%;
  border-radius: 32%;
  height: 48vw;
  width: 39vw;
}
.main_logo {
  position: absolute;
  height: 5vw;
  width: fit-content;
  margin-left: 4vw;
  top: 2vw;
  transition: 0.2s ease-in-out;
}

.main_logo svg {
  fill: transparent;
  stroke: none;
  height: 5vw;
  width: 5vw;
  transition: 1s ease-in;
}
.main_logo:hover svg {
  stroke: white;
}

.main_logo svg path {
  transition: 0.2s ease-in-out;
}
.main_logo:hover svg path {
  /* fill: grey; */
}

.svg_container_design {
  position: absolute;
  top: 0%;
  display: none;
}

.svg_container_design svg {
  opacity: 0.5;
  height: 77vh;
  /* animation: svg_design 14s infinite ease-in-out; */
  transition: 0.3s ease-in-out;
  animation-direction: alternate;

  left: -15%;
}

@keyframes svg_design {
  0% {
    stroke-dasharray: 300;
    stroke-dashoffset: 50%;
    stroke-opacity: 0.5;
  }
  100% {
    stroke-dasharray: 1000;
    stroke-opacity: 0.1;
    stroke-dashoffset: 90%;
  }
}

.main_title_container {
  position: absolute;
  top: 51%;
  left: 80%;
  transform: translate(-80%, -51%);
}

.svg_container svg {
  height: 6.3vw;
  width: 52vw;
}

.main_title_text {
  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
  color: white;
  text-align: center;
  letter-spacing: 0.4vw;
  font-weight: 100;
  font-size: 0.77vw;
}

.main_desc {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  margin-top: 1vw;
  gap: 2vw;
}

.line {
  width: 9vw;
  height: 0.1vw;
  background: rgba(255, 255, 255, 0.2);
}

.socials {
  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
  align-content: center;
  align-items: center;
  justify-content: center;
  width: fit-content;
  gap: 1.7vw;
  position: absolute;
  top: 92%;
  height: fit-content;
  margin-left: 5%;
  opacity: 0;
  transition: 0.4s;
}

.socials .fa {
  color: white;
  font-size: 1.4vw;
  opacity: 0.8;
}

.arrow_container {
  height: 1vw;
  width: fit-content;
  position: absolute;
  left: 95%;
  top: 91%;
  opacity: 0;
}

.arrow_container {
  height: 1vw;
  width: fit-content;
  position: absolute;
  left: 93%;
  top: 91%;
  animation-delay: 0.3s;
  animation: fade_down 0.7s ease-in forwards;
}

@keyframes fade_down {
  0% {
    opacity: 0;
    top: 84%;
  }
  100% {
    opacity: 1;
    top: 91%;
  }
}

.arrow_container svg {
  height: 9vw;
  top: -7.4vw;
  position: absolute;
  transition: 1s ease-in-out;
}

.arrow_container svg:hover {
  animation: arrow_dash 1s ease forwards;
}

@keyframes arrow_dash {
  0% {
    stroke-dashoffset: 300;
    stroke-dasharray: 290;
    opacity: 0;
  }
  70% {
    opacity: 1;
  }
  100% {
    opacity: 1;
    stroke-dasharray: 300;
    stroke-dashoffset: 0%;
  }
}

.main_navigation {
  display: flex;
  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
  align-content: center;
  justify-content: center;
  align-items: center;
  gap: 4vw;
  margin: 4vw;
}

.navigation_links {
  color: white !important;
  font-size: 1vw;

  font-family: "oo";
  font-weight: 100;
  z-index: 2;
  text-decoration: none;
}

.main_signin {
  position: absolute;
  left: 88%;
  top: 3vw;
  border-radius: 7px;
  background-color: #52525265;
  background-color: #0000002e;
  color: white !important;
  padding: 0.9vw 2vw;
  width: 4vw;
  text-align: center;
  font-family: "oo";
  font-size: 1vw;
  z-index: 1;
}
.main_signin:hover {
  background-color: #7f7f7f;
}
.container {
  position: relative;
  background-color: black;
  width: 100vw;
  height: 100vh;
  overflow: hidden;
}

.image {
  position: absolute;
  width: 100%;
  height: 100%;
  object-fit: cover;
  transition: 0.2s ease-out;
}
/* ... */

